--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,14 @@
 !app/logs/.gitkeep
 /app/phpunit.xml
 /bin/
+/bower_components/
 /composer.phar
+/node_modules/
 /vendor/
 /web/bundles/
 /web/uploads/
+/web/css/
+/web/js/
 .idea
 /.composer/
 .viminfo
