--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "julien/symfony.sandbox",
+    "name": "cheerup",
     "license": "proprietary",
     "type": "project",
     "autoload": {
