--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-uglifycss": "^1.0.4",
     "gulp-util": "^3.0.4",
+    "main-bower-files": "^2.9.0",
     "run-sequence": "^1.1.0",
     "shipit-cli": "^1.2.1",
     "shipit-deploy": "^1.3.1",
