--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -61,3 +61,7 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: UserBundle\Entity\User
+    registration:
+        form:
+            type: app_user_registration
+            validation_groups: [UserRegistration]
