--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -10,5 +10,7 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
+    hostname: localhost
+
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
