--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "gulp-livereload": "^3.8.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
