Add confirmation email

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,3 +64,8 @@ fos_user:
     registration:
         form:
             type: app_user_registration
+        confirmation:
+            enabled: true
+    from_email:
+        address:        "%fosub_sender_address%"
+        sender_name:    "%fosub_sender_name%"
