--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "scripts": {
     "postinstall": "./node_modules/bower/bin/bower install",
-    "test": "phpunit -c app/"
+    "test": "phpunit -c app/",
+    "deploy": "shipit staging deploy"
   },
   "repository": {
     "type": "git",
