--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~1.3",
-        "doctrine/doctrine-fixtures-bundle": "~2.2"
+        "doctrine/doctrine-fixtures-bundle": "~2.2",
+        "liip/imagine-bundle": "~1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
