--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,6 +70,8 @@ fos_user:
     from_email:
         address:        "%fosub_sender_address%"
         sender_name:    "%fosub_sender_name%"
+    group:
+        group_class: UserBundle\Entity\Group
 
 # LiipImagineBundle Configuration
 liip_imagine:
