--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,6 +17,7 @@ security:
                 provider: fos_userbundle
                 csrf_provider: security.csrf.token_manager
                 default_target_path: /profile
+                always_use_default_target_path: true
             logout:       true
             anonymous:    true
 
