--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -11,3 +11,7 @@ services:
         class: UserBundle\Form\Type\RegistrationFormType
         tags:
             - { name: form.type, alias: app_user_registration }
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
