--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~1.3",
         "doctrine/doctrine-fixtures-bundle": "~2.2",
-        "liip/imagine-bundle": "~1.3"
+        "liip/imagine-bundle": "~1.3",
+        "twig/extensions": "~1.3",
+        "symfony/intl": "^2.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
