--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,12 @@
         "symfony/monolog-bundle": "^2.8",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "friendsofsymfony/user-bundle": "2.*@dev",
+        "doctrine/doctrine-fixtures-bundle": "~2.3",
+        "liip/imagine-bundle": "~1.3",
+        "twig/extensions": "~1.3",
+        "symfony/intl": "3.0.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
