--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ script: phpunit -c app/
 before_script:
   - cp app/config/parameters.yml.travis app/config/parameters.yml
   - composer install
-  - php app/console doctrine:database:create
-  - php app/console doctrine:migrations:migrate -n
-  - php app/console doctrine:fixtures:load -n
+  - php bin/console doctrine:database:create
+  - php bin/console doctrine:schema:update --force
+  - php bin/console doctrine:fixtures:load -n
   - npm install
 
 git:
