--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: php
 
 php:
   - 5.5
-script: phpunit -c app/
+script: phpunit
 
 before_script:
   - cp app/config/parameters.yml.travis app/config/parameters.yml
